# sewer56-archives-nx

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.MD  Cargo.toml  LICENSE  README.MD  build.rs  cbindgen_c.toml  cbindgen_cpp.toml  flake.nix  mkdocs.yml  sewer56-archives-nx.generated.sln
projects/research/: Cargo.toml  README.MD  compare-best-between-folders.py  compare-compression-algorithms.py  copy_all_dxt1.py  process_all_dxt1.py  transform_dxt1.py
projects/research/dictionary-tester/: Cargo.toml
projects/research/dictionary-tester/src/: analyze.rs  main.rs
projects/research/mod-archive-stats/: README.MD
projects/research/mod-archive-stats/analyze-mod-stats/: Cargo.toml
projects/research/mod-archive-stats/make-mod-stats/: Cargo.toml  README.md
projects/research/mod-archive-stats/make-mod-stats/src/: main.rs
src/: AGENTS.md  Cargo.toml  lib.rs
src/api/: packer_builder.rs
src/api/enums/: compression_preference.rs  mod.rs
src/api/filedata/input/: from_array_provider.rs  from_boxed_slice_provider.rs  from_file_path_provider.rs  from_slice_reference_provider.rs  from_stream_provider.rs  mod.rs
src/api/filedata/input/existing_nx_block/: from_existing_nx_block.rs  lazy_decompressed_solid_nx_block.rs
src/api/filedata/output/: mod.rs  output_array_provider.rs  output_file_provider.rs
src/api/filedata/shared/: array_file_data.rs  mod.rs
src/api/packing/: packer_file.rs  packing_settings.rs
src/api/traits/: can_provide_file_data.rs  can_provide_input_data.rs  has_compression_preference.rs  has_dict_index.rs  has_file_size.rs  has_relative_path.rs  has_solid_type.rs  mod.rs
src/api/traits/filedata/: errors.rs  file_data.rs  input_data_provider.rs  mod.rs  output_data_provider.rs
src/api/traits/filedata/readonly/: file_provider_error.rs  input_data_provider.rs  mod.rs  read_only_file_data.rs
src/api/traits/filedata/writeonly/: file_output_error.rs  output_data_provider.rs  read_write_file_data.rs
src/headers/enums/: mod.rs  table_of_contents_version.rs
src/headers/enums/v1/: table_of_contents_version.rs
src/headers/managed/: block_size.rs  file_entry.rs  file_entry_intrinsics.rs  mod.rs  table_of_contents.rs  table_of_contents_builder.rs  table_of_contents_reader.rs
src/headers/managed/v1/: file_entry_intrinsics.rs  mod.rs  table_of_contents_builder.rs  table_of_contents_reader.rs
src/headers/managed/v2/: mod.rs  table_of_contents_builder.rs  table_of_contents_reader.rs
src/headers/parser/: mod.rs  string_pool.rs  string_pool_common.rs  string_pool_v0.rs
src/headers/parser/dictionary/: dictionary_builder.rs  dictionary_builder_wrappers.rs  dictionary_reader.rs
src/headers/raw/: native_file_entry.rs  native_file_entry_v0.rs  native_file_entry_v1.rs  native_file_header.rs  native_toc_block_entry.rs  native_toc_header.rs
src/headers/raw/common/: offset_index_path_tuple.rs
src/headers/raw/toc/: mod.rs  native_file_entry.rs  native_file_entry_v0.rs  native_file_entry_v1.rs  native_toc_block_entry.rs  native_toc_header_v0v1.rs  native_toc_header_v2.rs  native_toc_header_v3.rs
src/headers/raw/toc/v1/: mod.rs  native_file_entry_v0.rs  native_file_entry_v1.rs  native_toc_header_v0v1.rs  native_v1_toc_block_entry.rs
src/headers/raw/toc/v2/: format_selector.rs  mod.rs  native_toc_block_entry.rs  native_v2_toc_block_entry.rs
src/headers/traits/: can_convert_to_little_endian.rs
src/headers/types/: xxh3sum.rs
src/implementation/pack/: pack_state.rs  table_of_contents_builder_state.rs
src/implementation/pack/blocks/: polyfills.rs
src/research/: README.MD  benchmark-single-file-dict.py  compare-compression-algorithms.py
src/research/dictionary-tester/: Cargo.toml
src/research/dictionary-tester/src/: analyze.rs  main.rs
src/research/mod-archive-stats/analyze-mod-stats/: Cargo.toml
src/research/mod-archive-stats/analyze-mod-stats/src/: main.rs  parsing.rs
src/research/mod-archive-stats/make-mod-stats/: Cargo.toml
src/research/mod-archive-stats/make-mod-stats/src/: print_manager.rs
src/sewer56-archives-nx/: Cargo.toml  README.MD
src/sewer56-archives-nx/benches/my_benchmark/: assets.rs  main.rs  table_of_contents.rs
src/sewer56-archives-nx/src/: lib.rs
src/sewer56-archives-nx/src/api/filedata/: mod.rs
src/sewer56-archives-nx/src/api/packing/: packer_file.rs  packing_settings.rs
src/sewer56-archives-nx/src/api/traits/: has_solid_type.rs
src/sewer56-archives-nx/src/headers/managed/: table_of_contents.rs
src/sewer56-archives-nx/src/headers/parser/: string_pool.rs  string_pool_common.rs
src/sewer56-archives-nx/src/utilities/compression/: bzip3.rs  lz4.rs  mod.rs
src/sewer56-archives-nx/src/utilities/tests/: packing_test_helpers.rs
src/sewer56-archives-r3a/: Cargo.toml  README.MD
src/sewer56-archives-r3a/benches/my_benchmark/: assets.rs  create_string_pool.rs  table_of_contents.rs  table_of_contents_v2.rs
src/sewer56-archives-r3a/src/: lib.rs  prelude.rs
src/sewer56-archives-r3a/src/api/: packer_builder.rs
src/sewer56-archives-r3a/src/api/enums/: solid_preference.rs
src/sewer56-archives-r3a/src/api/packing/: packer_file.rs
src/sewer56-archives-r3a/src/api/traits/: has_relative_path.rs  progress.rs
src/sewer56-archives-r3a/src/headers/managed/: block_size.rs  mod.rs  table_of_contents.rs
src/sewer56-archives-r3a/src/headers/parser/: mod.rs  string_pool.rs  string_pool_common.rs
src/sewer56-archives-r3a/src/headers/raw/: native_file_header.rs
src/sewer56-archives-r3a/src/utilities/: math.rs
src/utilities/: math.rs  system_info.rs
src/utilities/arrange/: sort_lexicographically.rs
src/utilities/arrange/pack/: group_by_extension.rs  make_blocks.rs
src/utilities/compression/: copy.rs  lz4.rs  mod.rs  zstd.rs  zstd_stream.rs
src/utilities/compression/dictionary/: compress.rs  mod.rs  train.rs
src/utilities/io/: file_finder.rs
src/utilities/serialize/: little_endian_reader.rs  little_endian_writer.rs
src/utilities/tests/: mock_block.rs  packer_file_for_testing.rs  permutations.rs
tools/dictionary-tester/: Cargo.toml
tools/dictionary-tester/src/: analyze.rs  main.rs
(+196 files in other folders)
