# Profile Build
[profile.profile]
inherits = "release"
debug = true
codegen-units = 1
lto = true
strip = false  # No stripping!!

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.
panic = "abort"

[workspace]
members = [
    # Main Project Directory
    "projects/sewer56-archives-nx",

    # Tool to test dictionary compression
    # Requires nightly compiler. Is skipped on stable.
    "projects/research/dictionary-tester",
    
    # Mod archive statistics research tool
    "projects/research/mod-archive-stats/make-mod-stats"
]
resolver = "2"