# Profile Build
[profile.profile]
inherits = "release"
debug = true
codegen-units = 1
lto = true
strip = false  # No stripping!!

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.
panic = "abort"

[workspace]
members = [
    "projects/sewer56-archives-nx",
]
resolver = "2"

# Research tools are in a separate workspace: projects/research/
# See projects/research/README.MD for system requirements and usage.