[package]
name = "nx-dictionary-tester"
version = "0.1.0"
edition = "2021"
description = "High Performance Archive Format for Mod Assets"
repository = "https://github.com/Sewer56/sewer56-archives-nx"
license-file = "LICENSE"
include = ["**/*"]

[dependencies]
sewer56-archives-nx = { path = "../.." }
argh = "0.1.12"
bytesize = "1.3.0"
hashbrown = "0.15.1"
rayon = "1.10.0"
