[package]
name = "nx-dictionary-tester"
version = "0.1.0"
edition = "2021"
description = "High Performance Archive Format for Mod Assets"
repository = "https://github.com/Sewer56/sewer56-archives-nx"
license-file = "LICENSE"
include = ["**/*"]

[[bin]]
required-features = ["nightly"]
name = "nx-dictionary-tester"

# This crate only builds in nightly, because I'm lazy to fix for allocator_api2

[features]
default = []
nightly = ["sewer56-archives-nx/nightly", "hashbrown/nightly"]

[dependencies]
sewer56-archives-nx = { path = "../../sewer56-archives-nx" }
argh = "0.1.12"
bytesize = "1.3.0"
hashbrown = { version = "0.15.2" }
rayon = "1.10.0"