[package]
name = "nx-dictionary-tester"
version = "0.1.0"
edition = "2021"
description = "High Performance Archive Format for Mod Assets"
repository = "https://github.com/Sewer56/sewer56-archives-nx"
license-file = "LICENSE"
include = ["**/*"]

[[bin]]
name = "nx-dictionary-tester"

# This crate now builds on stable Rust

[features]
default = []

[dependencies]
sewer56-archives-nx = { path = "../../../src/sewer56-archives-nx", default-features = false }
argh = "0.1.13"
bytesize = "2.1.0"
hashbrown = { version = "0.16.0" }
rayon = "1.11.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
