[package]
name = "make-mod-stats"
version = "0.1.0"
edition = "2021"

[features]
default = []
research-tests = []

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP and JSON
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Compression
brotli = "3.4"
zstd = "0.13"

# Archive handling
zip = "0.6"
sevenz-rust = "0.4"
tar = "0.4"
flate2 = "1.0"

# File system utilities
tempfile = "3.8"

# sewer56-archives-nx integration
sewer56-archives-nx = { path = "../../../sewer56-archives-nx" }

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }